[project]

name = "pitchsqueezer"  # Required

version = "0.1.0"  # Required


description = "Robust pitch tracker for speech, using synchrosqueezing and spectral autocorrelation"  # Optional

readme = "README.md" # Optional

requires-python = ">=3.7"

license = {file = "LICENSE.txt"}


keywords = ["speech analysis", "pitch", "prosody", "tts"]  # Optional


authors = [
  {name = "Antti Suni", email = "antti.suni@helsinki.fi" } # Optional
]

maintainers = [
  {name = "Antti Suni", email = "antti.suni@helsinki.fi" } # Optional
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [

  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]


# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [ # Optional
   "numpy",
   "scipy",
   "joblib",
   "librosa",
   "ssqueezepy",
   "tqdm",
   "matplotlib"
]


[project.urls]  # Optional
"Homepage" = "https://github.com/asuni/PitchSqueezer"
"Bug Reports" = "https://github.com/asuni/PitchSqueezer/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/asuni/PitchSqueezer"


# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
sample = "pitchsqueezer:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.


[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
